@startuml ConfigNode
ConfigNode <|-- ConfigValueNode
ConfigNode <|-- ConfigObjectNode
ConfigNode <|-- ConfigArrayNode
ConfigNode <|-- ConfigNodeReference
ConfigNode <|-- ConfigDerivedObjectNode
ConfigNode <|-- ConfigDerivedArrayNode

abstract class ConfigNode {
    {abstract} +clone()
    {abstract} +type()
    +isValue()
    +isObject()
    +isNodeReference()
    +isDerivedObject()
    +isRoot()
    +parent()
    +setParent(parent)
    +rootNode()
    +toValue()
    +toObject()
    +toNodeReference()
    +toDerivedObject()
    +nodePath()
    +nodeAtPath(nodePath)
}
@enduml

@startuml ConfigValueNode
ConfigNode <|-- ConfigValueNode

abstract class ConfigNode

class ConfigValueNode {
    {abstract} +clone()
    {abstract} +type()
    +value()
    +setValue(value)
}
@enduml

@startuml ConfigObjectNode
ConfigNode <|-- ConfigObjectNode

abstract class ConfigNode

class ConfigObjectNode {
    {abstract} +clone()
    {abstract} +type()
    +count()
    +contains(name)
    +names()
    +name(node)
    +member(name)
    +setMember(name, node)
    +remove(name)
    +removeAll()
    +apply(other)
}
@enduml

@startuml ConfigArrayNode
ConfigNode <|-- ConfigArrayNode

abstract class ConfigNode

class ConfigArrayNode {
    {abstract} +clone()
    {abstract} +type()
    +count()
    +at(index)
    +prepend(node)
    +insert(index, node)
    +append(node)
    +remove(index)
    +removeAll()
    +apply(arrayNode)
    +apply(index, node)
}
@enduml

@startuml ConfigNodeReference
ConfigNode <|-- ConfigNodeReference

abstract class ConfigNode

class ConfigNodeReference {
    {abstract} +clone()
    {abstract} +type()
    +reference()
    +setReference(reference)
}
@enduml

@startuml ConfigDerivedObjectNode
ConfigNode <|-- ConfigDerivedObjectNode

abstract class ConfigNode

class ConfigDerivedObjectNode {
    {abstract} +clone()
    {abstract} +type()
    +bases()
    +setBases(bases)
    +config()
    +setConfig(config)
}
@enduml

@startuml ConfigDerivedArrayNode
ConfigNode <|-- ConfigDerivedArrayNode
ConfigDerivedArrayNode *-- ConfigDerivedArrayNodeOperation
ConfigDerivedArrayNodeOperation -- ConfigDerivedArrayNodeOperationType

abstract class ConfigNode

enum ConfigDerivedArrayNodeOperationType {
    PrependElement,
    PrependElements,
    InsertElement,
    InsertElements,
    AppendElement,
    AppendElements,
    OverrideElement,
    OverrideElements,
    RemoveElements
}

class ConfigDerivedArrayNodeOperation {
    +type()
    +setType(type)
    +destinationIndex()
    +setDestination(index)
    +base()
    +setBase(base)
    +sourceIndex()
    +setSourceIndex(index)
    +count()
    +setCount(count)
    +config()
    +setConfig(config)
}

class ConfigDerivedArrayNode {
    {abstract} +clone()
    {abstract} +type()
    +operationCount()
    +operation(index)
    +operations()
    +setOperations(operations)
    +prependOperation(operation)
    +insertOperation(index, operation)
    +appendOperation(operation)
    +setOperation(index, operation)
    +removeOperation(index)
    +removeAllOperations()
}
@enduml

@startuml ConfigReader
ConfigReaderBase <|-- ConfigReader
ConfigReaderRegistry *-- ConfigReaderBase

abstract class ConfigReaderBase {
    +referenceResolutionMaxCycles()
    +setReferenceResolutionMaxCycles(referenceResolutionMaxCycles)
    {abstract} +read(workingDir, destinationNodePath, otherParameters, externalConfigs, environmentVariables)
    {static} #isFullyResolved(node)
    {static} #unresolvedReferences(node)
    {static} #resolveReferences(externalConfigs, config)
    {static} #transformConfig(config, sourceNodePath, destinationNodePath)
}

class ConfigReader {
    +read(filePath, workingDir, sourceNodePath, destinationNodePath, externalConfigs, environmentVariables)
    +read(configObject, workingDir, sourceNodePath, destinationNodePath, externalConfigs, environmentVariables)
    +read(workingDir, destinationNodePath, otherParameters, externalConfigs, environmentVariables)
}

class ConfigReaderRegistry {
    {static} +instance()
    +registerConfigReader(type, configReader)
    +readConfig(type, workingDir, destinationNodePath, otherParameters, externalConfigs, environmentVariables)
}
@enduml

@startuml ConfigLoader
ConfigLoader <|-- ExampleConfig

abstract class ConfigLoader {
    +loadConfig(config)
    +loadConfig(parameterName, config)
    +loadOptionalConfig(parameterName, config, loaded)
    +loadConfigAtPath(path, config)
    +loadOptionalConfigAtPath(path, config, loaded)
    #loadRequiredConfigParameter(parameterValue, parameterName, config)
    #loadRequiredConfigParameter(parameterValue, parameterName, config, validator)
    #loadOptionalConfigParameter(parameterValue, parameterName, config, loaded)
    #loadOptionalConfigParameter(parameterValue, parameterName, config, validator, loaded)
    #loadRequiredConfigContainer(container, parameterName, config)
    #loadRequiredConfigContainer(container, parameterName, config, itemCreator)
    #loadOptionalConfigContainer(container, parameterName, config, loaded)
    #loadOptionalConfigContainer(container, parameterName, config, itemCreator, loaded)
    {abstract} -loadConfigParameters(config)
    {abstract} -validateConfig()
    {abstract} -handleError(error)
}

class ExampleConfig {
    {abstract} -loadConfigParameters(config)
    {abstract} -validateConfig()
    {abstract} -handleError(error)
}
@enduml
